kubernetes-cluster/manifests/apps/n8n/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: tools
spec:
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
      - name: n8n
        image: docker.n8n.io/n8nio/n8n
        ports:
        - containerPort: 5678
          name: http
        volumeMounts:
        - mountPath: '/home/node/.n8n'
          name: storage-volume
          subPath: n8n/data
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: tools-pvc
