kubernetes-cluster/manifests/apps/n8n/service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: tools
spec:
  selector:
    app: n8n
  ports:
  - name: n8n
    port: 80
    targetPort: 5678
