kubernetes-cluster/manifests/apps/n8n/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "n8n"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - automation.appchemy.co.za
    secretName: n8n-tls
  rules:
  - host: automation.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
---
